[tool.poetry]
name = "workspace"
version = "0.1.0"
description = ""
authors = ["Evgenij Tretyakoff <evgentretyakoff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
